# Project-PCSC

./: CMakeLists.txt  README.md  build.sh  clean.sh  hard_rebuild.sh  install_linux.bash  install_mac.bash  main.cpp
docs/: Doxyfile.in
includes/: DataReader.hpp  DataTypes.hpp  DataWriter.hpp  FormatFactoring.hpp  SpectralProcessing.hpp  Transforms.hpp  Visual.hpp  methods.hpp  utils.hpp
src/: DataReader.cpp  DataTypes.cpp  DataWriter.cpp  FormatFactoring.cpp  SpectralProcessing.cpp  Transforms.cpp  Visual.cpp  methods.cpp  utils.cpp
tests/: data_rw_tests.cpp  dft_files_identity_tests.cpp  dft_image_identity_tests.cpp  dft_tests.cpp  matrix_vector_tests.cpp  pipeline_test.cpp  py_comparison.py  shift_tests.cpp
tools/: bandfilter-image.cpp  bandfilter-sound.cpp  convolve-image.cpp  dft-image.cpp  dft-sound.cpp  histogram-image.cpp  histogram-sound.cpp
utils/: soft_rebuild.sh
